# k_quant

./: .gitignore  LICENSE  README.md  README.md.save  README.md.save.1  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs_pages,yml
cppcore/: CMakeLists.txt  compile.sh  compile_main.sh  main.cpp
cppcore/include/: chebyshev_coefficients.hpp  hamiltonian.hpp  linear_algebra.hpp  matrices.hpp  operators.hpp  physics.hpp  sparse_matrices.hpp  typedef.hpp  vectors.hpp  wannier90_utils.hpp
cppcore/include/matrices/: base_matrix.hpp  diagonal.hpp
cppcore/include/wannier90/: w90_operators.hpp  w90_parsers.hpp
cppcore/src/: CMakeLists.txt  CMakeLists.txt.save  hamiltonian.cpp  hopping_list.cpp  inline_compute-kpm-spectralOp.cpp  kuboBastinIIFromChebmom.cpp  mkl_sparse_matrix.cpp  sparse_matrix.cpp  spectralFunctionFromChebmom.cpp  timeCorrelationsFromChebmom.cpp  wannier90_utils.cpp
cppcore/src/wannier90/: parsers.cpp
cppcore/tests/density_of_states/: dos  dos.cpp  graphene.win  graphene.wout
cppcore/tests/w90parsers/: graphene_centres.xyz  run_tests  test_parsers.cpp
docs/: bands.html  example.html  example_0.html  example_2.html  genindex.html  index.html  intro.html  k_quant.html  k_quant.visualization.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spectral_solvers.html  system.html
docs/_sources/: bands.rst.txt  example.rst.txt  example_2.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt  system.rst.txt
docs/_sources/autodoc/: index.rst.txt  k_quant.linalg.rst.txt  k_quant.rst.txt  k_quant.visualization.sciplots.rst.txt
docs/_sources/examples/: example_0.rst.txt
docs/_static/: documentation_options.js
docs/api_doc/: k_quant.html  k_quant.visualization.html  modules.html
docs/autodoc/: index.html  k_quant.bands.html  k_quant.densities.html  k_quant.html  k_quant.linalg.html  k_quant.models.html  k_quant.operators.html  k_quant.visualization.html  k_quant.visualization.sciplots.html  modules.html
docs/doctrees/: environment.pickle  example.doctree  index.doctree  k_quant.doctree  k_quant.visualization.doctree  modules.doctree
docs/doctrees/.autodoc/: k_quant.doctree  k_quant.visualization.doctree  modules.doctree
docs/doctrees/autodoc/: k_quant.doctree  k_quant.visualization.doctree  modules.doctree
docs/examples/: example_0.html  example_1.html
docs/html/: .buildinfo  example.html  intro.html  modules.html  py-modindex.html  searchindex.js
docs/html/.autodoc/: k_quant.html  k_quant.visualization.html  modules.html
docs/html/_sources/.autodoc/: modules.rst.txt
docs/html/autodoc/: k_quant.html  k_quant.visualization.html  modules.html
docs/source/: conf.py  index.rst
examples/: graphene.py  linear_chain.py
examples/example2/: PtSe2.uc  PtSe2.xyz  _hamiltonian.c  _hamiltonian.py  density_of_states.py  density_of_states_performance.py  kpm.py  linear_chain.uc  linear_chain.xyz  system.py  wannier.py
k-quant/: bands.py  plot.py
k_quant/: __init__.py  bands.py  densities.py  kpm.py  lattice.py  system.py  wannier.py
k_quant/k_quant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
k_quant/linalg/: __init__.py  sparse.py  sparse_matrices.py
k_quant/models/: __init__.py  wannier.py
k_quant/operators/: __init__.py  base_operator.py  density.py  hamiltonian.py
k_quant/spectral_solvers/: kpm.py
k_quant/visualization/: __init__.py  sciplots.py
old_cppcore/: CMakeLists.txt  toolchain-icc+mkl.cmake  toolchain-icc.cmake
old_cppcore/include/: Version.h.in  chebyshev_moments.hpp  chebyshev_solver.hpp  kpm_chebmomconv.hpp  kpm_noneqop.hpp  quantum_states.hpp  sparse_matrix.hpp  special_functions.hpp  vector_list.hpp
old_cppcore/src/: chebyshev_moments.cpp  chebyshev_moments1D.cpp  chebyshev_moments2D.cpp  chebyshev_momentsTD.cpp  chebyshev_solver.cpp  chebyshev_vectors.cpp  check_kpm-nonEq_momconv.cpp  inline_compute-kpm-CorrOp.cpp  inline_compute-kpm-TimeEvProjetedOp.cpp  inline_compute-kpm-nonEqOp.cpp  kpm-nonEqOpatenergy.cpp  kuboBastinFromChebmom.cpp  kuboBastinIFromChebmom.cpp  kuboBastinSeaFromChebmom.cpp  kuboBastinSurfFromChebmom.cpp  kuboGreenwoodChebmomConvergence.cpp  kuboGreenwoodFromChebmom.cpp  mkl_linear_algebra.cpp  special_functions.cpp
sphinx/: conf.py  index.rst  k_quant.visualization.rst  modify_documentation.sh  modules.rst
sphinx/_build/doctrees/: bands.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree  plot.doctree
sphinx/_build/html/: .buildinfo  genindex.html  index.html  intro.html  modules.html  objects.inv  plot.html  searchindex.js
sphinx/_build/html/_sources/: index.rst.txt
sphinx/_build/man/: k-quant.1
sphinx/autodoc/: conf.py  index.rst  k_quant.bands.rst  k_quant.densities.rst  k_quant.rst  k_quant.visualization.rst
sphinx/examples/: example_0.rst  example_1.rst  example_2.rst
sphinx/logos/k_quant/: bands.py  lattice.py  system.py
sphinx/logos/k_quant/linalg/: sparse.py
sphinx/logos/k_quant/spectral_solvers/: kpm.py
sphinx/source/: conf.py  example_2.rst  index.rst  spectral_solvers.rst  system.rst
sphinx/source/links/: link.py
sphinx_2/: conf.py  example.rst  modules.rst
sphinx_2/_build/doctrees/: environment.pickle  example.doctree  index.doctree  modules.doctree
sphinx_2/_build/doctrees/examples/: example_0.doctree  example_1.doctree
sphinx_2/_build/html/: .buildinfo  example.html  modules.html  objects.inv  search.html
sphinx_2/_build/html/_sources/: modules.rst.txt
sphinx_2/_build/html/_sources/examples/: example_0.rst.txt
sphinx_2/_build/html/examples/: example_0.html
sphinx_2/autodoc/: k_quant.models.rst  k_quant.operators.rst  k_quant.rst
