[metadata]
name = k_quant
version = 0.0.1
author = Jose H. Garcia
author_email = josehugo.garcia@protonmail.com
description = An utility to perform calculations in the momentum space
long_description = file: README.md
long_description_content_type = text/markdown
url = https://josehgarciaa.github.io/k_quant/
project_urls =
    Bug Tracker = https://github.com/josehgarciaa/k_quant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = k_quant
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
